--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thought-gallery-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +13,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "uuid": "^11.1.0"
   }
 }
